--- a/package.json
+++ b/package.json
@@ -9,23 +9,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "framer-motion": "^10.12.3",
     "lodash": "^4.17.21",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "pg": "^8.10.0",
+    "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.10.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.16.3",
+    "@types/pubsub-js": "^1.8.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
