--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.10.0",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
