--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
+    "copy-to-clipboard": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^10.12.3",
