--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "copy-to-clipboard": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "file64": "^1.0.2",
     "framer-motion": "^10.12.3",
+    "i18next": "^23.4.4",
+    "i18next-http-backend": "^2.2.1",
     "lodash": "^4.17.21",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
@@ -28,9 +31,11 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.1.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.10.0",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
