--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/storage": "^6.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/node-forge": "^1.3.8",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
@@ -18,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^10.12.3",
+    "fs": "^0.0.1-security",
     "i18next": "^23.4.4",
     "i18next-http-backend": "^2.2.1",
     "lodash": "^4.17.21",
